03_Project/src/test/resources/cocos/invalid/DuplicateTransition.pn
petrinet H2O {

    assert l0live(*);

    place H2 initial 2;
    place O2 initial 2;
    place H2O;

    transition t:
        2 <- H2
        1 <- O2
        2 -> H2O

    transition t:
        2 -> H2
        1 -> O2
        2 <- H2O
}